# phyani_playground

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
proj/: phyani_playground.sln  phyani_playground.vcxproj  phyani_playground.vcxproj.filters  pyhani_playground.sln  pyhani_playground.vcxproj  pyhani_playground.vcxproj.filters
proj/glad/: glad.vcxproj  glad.vcxproj.filters
proj/imgui/: imgui.vcxproj  imgui.vcxproj.filters
proj/imgui/imgui/: imgui.vcxproj  imgui.vcxproj.filters
proj/imguizmo/: imguizmo.vcxproj  imguizmo.vcxproj.filters
src/: AnimationLoop.cpp  AnimationLoop.h  AnimationSystem.cpp  AnimationSystem.h  CMakeLists.txt  Camera.cpp  Camera.h  Common.h  CommonOpenGL.h  CommonOpenGl.h  CubeShaderTestScene.cpp  CubeShaderTestScene.h  DemoScene.cpp  DemoScene.h  EntityComponentSystem.cpp  EntityComponentSystem.h  EntityFactory.cpp  EntityFactory.h  EntityManager.h  EventQueue.h  GflwWindow.cpp  GflwWindow.h  GlfwHelper.h  GlfwWindow.cpp  GlfwWindow.h  GlfwWindowManager.cpp  GlfwWindowManager.h  ImGuiGlfw3Helper.cpp  ImGuiGlfw3Helper.h  ImGuiScene.cpp  ImGuiScene.h  Integrator.h  Integrators.h  MathHelper.h  RenderSystem.cpp  RenderSystem.h  RenderWindow.cpp  RenderWindow.h  RigidBody.cpp  RigidBody.h  (+14 more)
src/render_backend/: Camera.cpp  CommonOpenGl.h  DrawableFactory.cpp  DrawableFactory.h  DrawableManager.h  GlfwRenderWindow.cpp  GlfwRenderWindow.h  GlfwRenderWindowWrapper.cpp  GlfwRenderWindowWrapper.h  GlfwWindowManager.cpp  GlfwWindowManager.h  ImGuiGlfw3Helper.cpp  ImGuiGlfw3Helper.h  RenderExceptions.h  RenderWindow.cpp  RenderWindow.h  Scene.cpp  ShaderProgram.cpp  ShaderProgram.h
src/scenes/: CubeShaderTestScene.cpp  CubeShaderTestScene.h  ImGuiScene.cpp  ImGuiScene.h  ShaderTestScene.h
src/shaders/: basic.frag  basic.vert
submodules/: CMakeLists.txt
